fix layout problems

--- a/app.css
+++ b/app.css
@@ -124,11 +124,12 @@ div.container {
   margin: 2rem -0.5rem;
 }
 
-.flex > .card {
-  display:flex;
-  flex: 1 1 30%;  /*grow | shrink | basis */
-  height: 100px;
+.card {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   padding: 0.5rem 0.5rem;
+  width: 33.33%;
 }
 
 * {box-sizing: border-box;}
@@ -180,7 +181,7 @@ img {
 .flip-card-front, .flip-card-back {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 320px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
@@ -233,3 +234,49 @@ img {
   text-align:center;
 }
 
+
+.flip-container {
+  perspective: 1000;
+}
+  /* flip the pane when hovered */
+  .flip-container:hover .flipper, .flip-container.hover .flipper {
+      transform: rotateY(180deg);
+  }
+
+.flip-container, .front, .back {
+  width: 100%;
+}
+
+/* flip speed goes here */
+.flipper {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+  z-index: 2;
+  /* for firefox 31 */
+  transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+  transform: rotateY(180deg);
+  border: 2px solid black;
+  background-color: #2980b9;
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
